kustomize/overlays/prod/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: appuio
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: appuio
          image: tsurankov/example-spring-boot-helloworld:1.0.0
