kustomize/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
spec:
  rules:
    - host: appuio-prod.local
